# Rusty-Rules-Referee

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build-installer.sh  build.ps1  build.rs  build.sh  deploy-docs.sh  deploy-remote.sh  deploy.ps1  deploy.sh  install-r3-header.sh  promote.sh  push-update.ps1  push-update.sh  referee.example.toml  setup-build-server.sh  uninstall-r3.sh
deploy/: r3.toml  server.cfg  urt-default-mapcycle.txt  urt-default.cfg
docs/: changelog.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/commands/: index.md
docs/dashboard/: api-reference.md  index.md
docs/development/: adding-plugins.md  architecture.md  contributing.md
docs/guide/: configuration.md  installation.md  introduction.md  quick-start.md
docs/plugins/: admin.md  adv.md  afk.md  callvote.md  censor.md  censorurt.md  chatlogger.md  countryfilter.md  customcommands.md  firstkill.md  flagannounce.md  follow.md  headshotcounter.md  index.md  login.md  makeroom.md  mapconfig.md  namechecker.md  nickreg.md  pingwatch.md  poweradminurt.md  scheduler.md  spamcontrol.md  spawnkill.md  specchecker.md  spree.md  stats.md  tk.md  vpncheck.md  welcome.md  xlrstats.md
migrations/: 001_initial.sql  002_xlrstats.sql  003_admin_users.sql  004_dashboard_features.sql  005_auth_column.sql  006_multiserver.sql  007_map_configs.sql  008_server_update_channel.sql  009_server_scoping.sql  010_map_repo.sql  011_server_maps.sql  012_map_configs_v2.sql  013_server_update_interval.sql  014_hubs.sql  015_hub_update_channel.sql  016_hub_update_interval.sql  017_update_enabled.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/core/: client.rs  clients.rs  context.rs  game.rs  log_tailer.rs  mod.rs  self_uninstall.rs  types.rs
src/events/: mod.rs
src/hub/: actions.rs  client_manager.rs  game_server_manager.rs  host_info.rs  mod.rs
src/maprepo/: builtin_defaults.rs  mod.rs
src/mapscan/: mod.rs
src/parsers/: mod.rs  traits.rs
src/parsers/urbanterror/: mod.rs
src/plugins/: catalog.rs  mod.rs  registry.rs  traits.rs
src/plugins/admin/: mod.rs
src/plugins/adv/: mod.rs
src/plugins/afk/: mod.rs
src/plugins/callvote/: mod.rs
src/plugins/censor/: mod.rs
src/plugins/censorurt/: mod.rs
src/plugins/chatlogger/: mod.rs
src/plugins/countryfilter/: mod.rs
src/plugins/customcommands/: mod.rs
src/plugins/discord/: mod.rs
src/plugins/firstkill/: mod.rs
src/plugins/flagannounce/: mod.rs
src/plugins/follow/: mod.rs
src/plugins/geowelcome/: mod.rs
src/plugins/headshotcounter/: mod.rs
src/plugins/login/: mod.rs
src/plugins/makeroom/: mod.rs
src/plugins/mapconfig/: mod.rs
src/plugins/namechecker/: mod.rs
src/plugins/nickreg/: mod.rs
src/plugins/pingwatch/: mod.rs
src/plugins/poweradminurt/: mod.rs
src/plugins/scheduler/: mod.rs
src/plugins/spamcontrol/: mod.rs
src/plugins/spawnkill/: mod.rs
src/plugins/specchecker/: mod.rs
src/plugins/spree/: mod.rs
src/plugins/stats/: mod.rs
src/plugins/tk/: mod.rs
src/plugins/vpncheck/: mod.rs
src/plugins/welcome/: mod.rs
src/plugins/xlrstats/: mod.rs
src/rcon/: mod.rs
src/storage/: mod.rs  mysql.rs  sqlite.rs
src/sync/: ca.rs  client.rs  handlers.rs  master.rs  mod.rs  protocol.rs  queue.rs  tls.rs  urt_cfg.rs
src/update/: mod.rs
src/web/: auth.rs  mod.rs  state.rs  ws.rs
src/web/api/: aliases.rs  audit.rs  chat.rs  commands.rs  config.rs  groups.rs  hubs.rs  mapconfigs.rs  mapcycle.rs  maprepo.rs  mod.rs  notes.rs  pairing.rs  penalties.rs  players.rs  plugins.rs  server.rs  server_control.rs  servers.rs  setup.rs  stats.rs  users.rs  version.rs  votes.rs  wizard.rs
ui/: package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: app.css  app.html
ui/src/lib/: api.svelte.js  auth.js  auth.svelte.js  live.svelte.js  mode.svelte.js  urt-cfg-parse.js  urt-cvars.js  utils.js  ws.js
ui/src/lib/components/: MapConfigCreateDialog.svelte  (+2 more)
video/: .env.example  README.md  build-video.ts  narrate.ts  package-lock.json  package.json  record.ts  tsconfig.json
video/lib/: config.ts
video/mock/: bootstrap-certs.ts  heartbeat.ts  rcon.ts  update-server.ts
video/script/: narration.json
video/scripts/: publish.ts  start-demo-stack.ts  stop-demo-stack.ts
video/seed/: seed.ts
(+38 files in other folders)
