[package]
name = "rusty-rules-referee"
version = "2.0.0"
edition = "2021"
description = "Rusty Rules Referee — Game server administration bot written in Rust"
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/slackin/Rusty-Rules-Referee"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex for log parsing
regex = "1"

# Database (SQLx with async support)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql", "chrono"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# Web server / Admin UI
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.16"
uuid = { version = "1", features = ["v4"] }

# HTTP client (for Discord webhooks, GeoIP lookups)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# TLS (mTLS for client/server mode)
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
sha2 = "0.10"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# Certificate generation (CA / client certs for quick-connect pairing)
rcgen = { version = "0.13", features = ["x509-parser"] }
rand = "0.8"
time = "0.3"

[dev-dependencies]
tokio-test = "0.4"
